--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <div class="container">
   <div class="container-settings">
-    <app-settings></app-settings>
+    <app-settings 
+      [timer]="socketSettings.timer"
+      [arraySize]="socketSettings.arraySize"
+      [additionalArrayIds]="socketSettings.additionalArrayIds"
+      (onSettingsChanged)="changeSocketSettings($event)"
+    >
+    </app-settings>
   </div>
   
   <div class="container-table">
