--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,6 @@
   </div>
   
   <div class="container-table">
-    <app-table></app-table>
+    <app-table [rows]="rows$ | async"></app-table>
   </div>
 </div>
