--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="container-settings">
     <app-settings 
-      [timer]="socketSettings.timer"
-      [arraySize]="socketSettings.arraySize"
-      [additionalArrayIds]="socketSettings.additionalArrayIds"
-      (onSettingsChanged)="changeSocketSettings($event)"
+      [timer]="appSettings.timer"
+      [arraySize]="appSettings.arraySize"
+      [additionalArrayIds]="appSettings.additionalArrayIds"
+      (onSettingsChanged)="changeAppSettings($event)"
     >
     </app-settings>
   </div>
