--- a/src/app/components/app-settings/app-settings.component.html
+++ b/src/app/components/app-settings/app-settings.component.html
@@ -1,16 +1,16 @@
 <div class="settings-container">
     <div class="value-container">
         <label>Timer, ms</label>
-        <input type="number" [(ngModel)]="timer" (ngModelChange)="onSettingsChange()">
+        <input type="number" [(ngModel)]="timer" [class.invalid]="!timerValid" (ngModelChange)="onSettingsChange()">
     </div>
 
     <div class="value-container">
         <label>Array size</label>
-        <input type="number" [(ngModel)]="arraySize" (ngModelChange)="onSettingsChange()">
+        <input type="number" [(ngModel)]="arraySize" [class.invalid]="!arraySizeValid" (ngModelChange)="onSettingsChange()">
     </div>
 
     <div class="value-container">
         <label>Additional array ids</label>
-        <input type="text" class="long-input" [(ngModel)]="additionalArrayIds" (ngModelChange)="onSettingsChange()">
+        <input type="text" class="long-input" [(ngModel)]="additionalArrayIds" [class.invalid]="!additionalArrayIdsValid" (ngModelChange)="onSettingsChange()">
     </div>
 </div>
