--- a/src/app/components/app-settings/app-settings.component.scss
+++ b/src/app/components/app-settings/app-settings.component.scss
@@ -1,19 +1,23 @@
 .settings-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  .value-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 10px;
 
-    .value-container {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
+    input {
+      width: 100px;
 
-        input {
-            width: 100px;
+      &.long-input {
+        width: 300px;
+      }
 
-            &.long-input {
-                width: 300px;
-            }
-        }
+      &.invalid {
+        border: 1px solid red;
+      }
     }
+  }
 }
