--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     width: 100%;
+    min-width: 1000px;
  
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
@@ -18,5 +19,8 @@
         border: 1px solid gray;
         padding: 20px;
         border-top: none;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
     }
 }
