--- a/src/app/components/app-table/app-table.component.html
+++ b/src/app/components/app-table/app-table.component.html
@@ -1,65 +1,49 @@
-<table>
-    <thead>
-        <tr>
-            <th>
-                id
-            </th>
-            <th>
-                int
-            </th>
-            <th>
-                float
-            </th>
-            <th>
-                color
-            </th>
-            <th>
-                child
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let row of rows">
-            <td>
-                {{ row.id }}
-            </td>
-            <td>
-                {{ row.int }}
-            </td>
-            <td>
-                {{ row.float }}
-            </td>
-            <td>
-                <div [style.background-color]="row.color">
-                    {{ row.color }}
-                </div>
-            </td>
-            <td>
-                <table class="nested-table">
-                    <thead>
-                        <tr>
-                            <th>
-                                id
-                            </th>
-                            <th>
-                                color
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                {{ row.child.id }}
-                            </td>
-                            <td>
-                                <div [style.background-color]="row.child.color">
-                                    {{ row.child.color }}
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div class="grid-container">
+  <div class="grid-header">
+    <div>
+        id
+    </div>
+    <div>
+        int
+    </div>
+    <div>
+        float
+    </div>
+    <div>
+        color
+    </div>
+    <div>
+        child
+    </div>
+  </div>
+  <div class="grid-body">
+    <ng-container *ngFor="let row of rows">
+      <div class="row-container">
+        <div>{{ row.id }}</div>
+        <div>{{ row.int }}</div>
+        <div>{{ row.formatFloat() }}</div>
+        <div>
+            <span [style.background-color]="row.color">
+                {{ row.color }}
+            </span>
+        </div>
+        <div>
+          <div class="nested-grid">
+            <div class="nested-header">
+              <div>id</div>
+              <div>color</div>
+            </div>
+            <div class="nested-body">
+              <div>{{ row.child.id }}</div>
+              <div>
+                <span [style.background-color]="row.child.color">
+                    {{ row.child.color }}
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+  </div>
+</div>
